--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 .card {
   border: none;
   border-radius: 10px;
-  width: 275px;
+  width: 400px;
   margin-top: 20%;
 }
 
@@ -17,7 +17,13 @@
   margin-top: 6px;
   cursor: pointer;
 }
+.text-dark {
+  margin-top: 0px;
+}
 
+.text-dark p {
+  line-height: 16px;
+}
 .card-bottom {
   background: #3e454d;
   border-radius: 6px;
@@ -37,4 +43,6 @@
 .btn-secondary:focus {
   box-shadow: none;
 }
-
+a.navbar-brand {
+  margin-left: 25px;
+}
