--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,109 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.my-app{
+  background-image: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)),url(https://free4kwallpapers.com/uploads/originals/2019/09/29/a-financial-district-wallpaper.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: whitesmoke;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.home-section {
+  position: relative;
+  background:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.4)),url('https://www.cdotrends.com/sites/default/files/iStock-1052990146.jpeg') no-repeat center center;
+  background-size: cover;
+  width: 90%;
+  margin-left: 60px;
+  height: 1000px;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.home-section .overlay {
+  position: absolute;
+  top: 40%;
+  left: 30%;
+  transform: translate(-50%, -50%);
   color: white;
+  padding: 1em;
 }
 
-.App-link {
-  color: #61dafb;
+#section1{
+  margin-left: 0px;
+
+}
+.about-container{
+  
+  background-color: #fff;
+  padding: 50px;
+  color: black;
+  position: relative;
+  width: 100%;
+
+}
+.services-container{
+  color: whitesmoke;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.faq-section {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.faq-section h2 {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+}
+
+.ui.accordion {
+  width: 100%;
+  border: none;
+  box-shadow: none;
+}
+
+.ui.accordion .title {
+  font-size: 1.2rem;
+  color: #333;
+  background-color: #f7f7f7;
+  padding: 1rem;
+  border: 1px solid #e7e7e7;
+  border-radius: 0.25rem;
+  margin-bottom: 1rem;
+  cursor: pointer;
+}
+
+.ui.accordion .active.title {
+  background-color: #fff;
+}
+
+.ui.accordion .content {
+  font-size: 1.1rem;
+  color: #666;
+  padding: 1rem;
+  border: 1px solid #e7e7e7;
+  border-top: none;
+  border-radius: 0 0 0.25rem 0.25rem;
+  background-color: #fff;
+}
+
+.footer-container {
+  background-color: black ;
+  padding: 30px;
+
+}
+
+.footer-row {
+  margin-bottom: 20px;
+}
+
+h4 {
+  margin-bottom: 20px;
+}
+.signup-title{
+  text-align: center;
+}
+
+@media only screen and (max-width: 767px) {
+  .footer-row {
+    margin-bottom: 0;
   }
 }
