--- a/src/App.css
+++ b/src/App.css
@@ -177,3 +177,88 @@ h4 {
     margin-bottom: 0;
   }
 }
+
+#deposit-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 250px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+#deposit-container h1 {
+  font-size: 2.5em;
+  margin-bottom: 20px;
+}
+
+#deposit-container h3 {
+  font-size: 1.5em;
+  margin-bottom: 20px;
+}
+
+#deposit-container form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#deposit-container input[type="number"] {
+  width: 100%;
+  max-width: 300px;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 1.2em;
+}
+
+#deposit-container button {
+  font-size: 1.2em;
+  padding: 10px 20px;
+  border-radius: 5px;
+}
+#withdraw-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 250px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+#withdraw-container h1 {
+  font-size: 2.5em;
+  margin-bottom: 20px;
+}
+
+#withdraw-container h3 {
+  font-size: 1.5em;
+  margin-bottom: 20px;
+}
+
+#withdraw-container form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#withdraw-container input[type="number"] {
+  width: 100%;
+  max-width: 300px;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 1.2em;
+}
+
+#withdraw-container button {
+  font-size: 1.2em;
+  padding: 10px 20px;
+  border-radius: 5px;
+}
