--- a/src/App.css
+++ b/src/App.css
@@ -262,3 +262,48 @@ h4 {
   padding: 10px 20px;
   border-radius: 5px;
 }
+#savings-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 250px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  }
+  
+  #savings-container h1 {
+  font-size: 2.5em;
+  margin-bottom: 20px;
+  }
+  
+  #savings-container h3 {
+  font-size: 1.5em;
+  margin-bottom: 20px;
+  }
+  #savings-container label{
+    
+  }
+  
+  #savings-container form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  }
+  
+  #savings-container input[type="number"] {
+  width: 100%;
+  max-width: 300px;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 1.2em;
+  }
+  
+  #savings-container button {
+  font-size: 1.2em;
+  padding: 10px 20px;
+  border-radius: 5px;
+  }
