--- a/src/App.css
+++ b/src/App.css
@@ -85,7 +85,7 @@ a.navbar-brand .fos-brand {
   background-size: cover;
   width: 90%;
   margin-left: 60px;
-  height: 1000px;
+  height: 950px;
 
 }
 
@@ -183,6 +183,16 @@ a.navbar-brand .fos-brand {
   border-top: none;
   border-radius: 0 0 0.25rem 0.25rem;
   background-color: #fff;
+}
+
+@media only screen and (max-width: 767px) {
+  .signup-title {
+    font-size: 2rem;
+  }
+  .ui.form input,
+  .ui.form select {
+    font-size: 1.2rem
+  }
 }
 
 .footer-container {
