--- a/src/App.css
+++ b/src/App.css
@@ -67,157 +67,6 @@ a.navbar-brand .fos-brand {
   font-size: 24px;
 }
 
-
-/* THIS IS FOR LANDING PAGE */
-.App {
-  text-align: center;
-}
-.my-app{
-  background-image: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)),url(https://free4kwallpapers.com/uploads/originals/2019/09/29/a-financial-district-wallpaper.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  color: whitesmoke;
-}
-
-.home-section {
-  position: relative;
-  background:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.4)),url('https://www.cdotrends.com/sites/default/files/iStock-1052990146.jpeg') no-repeat center center;
-  background-size: cover;
-  width: 90%;
-  margin-left: 60px;
-  height: 950px;
-
-}
-
-.home-section .overlay {
-  position: absolute;
-  top: 40%;
-  left: 30%;
-  transform: translate(-50%, -50%);
-  color: white;
-  padding: 1em;
-}
-
-#section1{
-  margin-left: 0px;
-
-}
-.about-container{
-  
-  background-color: #fff;
-  padding: 50px;
-  color: black;
-  position: relative;
-  width: 100%;
-
-}
-.header {
-
-  color: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 1rem;
-}
-
-.menu {
-  background-color: #333;
-  color: #fff;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.menu a {
-  color: #fff;
-  text-decoration: none;
-  margin: 0 1rem;
-  font-size: 1.2rem;
-  cursor: pointer;
-  transition: all 0.3s ease-in-out;
-}
-
-.menu a:hover {
-  color: #c7c7c7;
-}
-
-.services-container{
-  color: whitesmoke;
-}
-
-.faq-section {
-  max-width: 600px;
-  margin: 0 auto;
-}
-
-.faq-section h2 {
-  font-size: 2rem;
-  margin-bottom: 2rem;
-}
-
-.ui.accordion {
-  width: 100%;
-  border: none;
-  box-shadow: none;
-}
-
-.ui.accordion .title {
-  font-size: 1.2rem;
-  color: #333;
-  background-color: #f7f7f7;
-  padding: 1rem;
-  border: 1px solid #e7e7e7;
-  border-radius: 0.25rem;
-  margin-bottom: 1rem;
-  cursor: pointer;
-}
-
-.ui.accordion .active.title {
-  background-color: #fff;
-}
-.ui.accordion .content {
-  font-size: 1.1rem;
-  color: #666;
-  padding: 1rem;
-  border: 1px solid #e7e7e7;
-  border-top: none;
-  border-radius: 0 0 0.25rem 0.25rem;
-  background-color: #fff;
-}
-
-@media only screen and (max-width: 767px) {
-  .signup-title {
-    font-size: 2rem;
-  }
-  .ui.form input,
-  .ui.form select {
-    font-size: 1.2rem
-  }
-}
-
-.footer-container {
-  background-color: black ;
-  padding: 30px;
-
-}
-
-.footer-row {
-  margin-bottom: 20px;
-}
-
-h4 {
-  margin-bottom: 20px;
-}
-.signup-title{
-  text-align: center;
-}
-
-@media only screen and (max-width: 767px) {
-  .footer-row {
-    margin-bottom: 0;
-  }
-}
-
 #deposit-container {
   display: flex;
   flex-direction: column;
@@ -345,3 +194,253 @@ h4 {
   padding: 10px 20px;
   border-radius: 5px;
   }
+
+
+/* THIS IS FOR LANDING PAGE */
+.App {
+  text-align: center;
+}
+.my-app{
+  background-image: linear-gradient(rgba(0,0,0.9,9),rgba(0,0,0.9,0.9)),url(https://free4kwallpapers.com/uploads/originals/2019/09/29/a-financial-district-wallpaper.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: whitesmoke;
+}
+
+.home-section {
+  position: relative;
+  background:linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.4)),url('https://www.cdotrends.com/sites/default/files/iStock-1052990146.jpeg') no-repeat center center;
+  background-size: cover;
+  width: 90%;
+  margin-left: 60px;
+  height: 950px;
+
+}
+
+span{
+  color: #2596be;
+}
+
+.home-section .overlay {
+  position: absolute;
+  top: 40%;
+  left: 30%;
+  letter-spacing: 1PX;
+  transform: translate(-50%, -50%);
+  color: white;
+  padding: 1em;
+}
+
+#section1{
+  margin-left: 0px;
+
+}
+.about-container{
+  
+  background-color:transparent;
+  padding: 50px;
+  color: whitesmoke;
+  font-size: 18px;
+  position: relative;
+  width: 100%;
+
+}
+.header {
+
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+}
+
+.menu {
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.menu a {
+  color: #fff;
+  text-decoration: none;
+  margin: 0 1rem;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.menu a:hover {
+  color: #c7c7c7;
+}
+
+.services-container{
+  color: whitesmoke;
+}
+
+.faq-section {
+  max-width: 600px;
+  background-color: transparent;
+  margin: 0 auto;
+  box-sizing: border-box;
+  border-radius: 10px;
+  padding: 30px;
+  border: 1px solid white;
+
+}
+
+.faq-section h2 {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+}
+
+.ui.accordion {
+  width: 100%;
+  border: none;
+  box-shadow: none;
+}
+
+.ui.accordion .title {
+  font-size: 1.2rem;
+  color: black;
+  background-color: #f7f7f7;
+  padding: 1rem;
+  border: 1px solid #e7e7e7;
+  border-radius: 0.25rem;
+  margin-bottom: 1rem;
+  cursor: pointer;
+}
+
+.ui.accordion .active.title {
+  background-color: #fff;
+}
+.ui.accordion .content {
+  font-size: 1.1rem;
+  color: #fff;
+  padding: 1rem;
+  border: 1px solid #e7e7e7;
+  border-top: none;
+  border-radius: 0 0 0.25rem 0.25rem;
+  background-color: transparent;
+}
+
+@media only screen and (max-width: 767px) {
+  .signup-title {
+    font-size: 2rem;
+  }
+  .ui.form input,
+  .ui.form select {
+    font-size: 1.2rem
+  }
+}
+
+.footer-container {
+  background-color: black ;
+  padding: 30px;
+
+}
+
+.footer-row {
+  margin-bottom: 20px;
+}
+
+h4 {
+  margin-bottom: 20px;
+}
+.signup-title{
+  text-align: center;
+}
+
+@media only screen and (max-width: 767px) {
+  .footer-row {
+    margin-bottom: 0;
+  }
+}
+
+.ring-container
+{
+  margin:0;
+  padding:0;
+  background:#262626;
+}
+.ring
+{
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+  width:150px;
+  height:150px;
+  background:transparent;
+  border:3px solid #3c3c3c;
+  border-radius:50%;
+  text-align:center;
+  line-height:150px;
+  font-family:sans-serif;
+  font-size:20px;
+  color:black;
+  letter-spacing:4px;
+  text-transform:uppercase;
+  text-shadow:0 0 10px #fff000;
+  box-shadow:0 0 20px rgba(0,0,0,.5);
+}
+.ring:before
+{
+  content:'';
+  position:absolute;
+  top:-3px;
+  left:-3px;
+  width:100%;
+  height:100%;
+  border:3px solid transparent;
+  border-top:3px solid #fff000;
+  border-right:3px solid #fff000;
+  border-radius:50%;
+  animation:animateC 2s linear infinite;
+}
+span
+{
+  display:block;
+  position:absolute;
+  top:calc(50% - 2px);
+  left:50%;
+  width:50%;
+  height:4px;
+  background:transparent;
+  transform-origin:left;
+  animation:animate 2s linear infinite;
+}
+span:before
+{
+  content:'';
+  position:absolute;
+  width:16px;
+  height:16px;
+  border-radius:50%;
+  background:#fff000;
+  top:-6px;
+  right:-8px;
+  box-shadow:0 0 20px #fff000;
+}
+@keyframes animateC
+{
+  0%
+  {
+    transform:rotate(0deg);
+  }
+  100%
+  {
+    transform:rotate(360deg);
+  }
+}
+@keyframes animate
+{
+  0%
+  {
+    transform:rotate(45deg);
+  }
+  100%
+  {
+    transform:rotate(405deg);
+  }
+}
